--- a/package.json
+++ b/package.json
@@ -34,11 +34,15 @@
   },
   "dependencies": {
     "@babel/core": "^7.4.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/runtime-corejs2": "^7.4.5",
     "babel-loader": "^8.0.6",
     "core-js": "2",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.6",
+    "vuex": "^3.1.1",
+    "webpack-bundle-analyzer": "^3.3.2"
   }
 }
